fix: fix scrollbar styles

--- a/task-05/src/styles/styles.scss
+++ b/task-05/src/styles/styles.scss
@@ -94,6 +94,8 @@ body {
   overflow-y: scroll;
   width: 100%;
   padding-right: 10px;
+  scrollbar-width: thin;
+  scrollbar-color: lighten($calcBgColor, 10%) $calcBgColor;
 }
 
 .display-container {
